--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
@@ -4,10 +4,6 @@ runtime: com.obsproject.Studio
 runtime-version: stable
 sdk: org.kde.Sdk//6.8
 build-extension: true
-separate-locales: false
-appstream-compose: false
-build-options:
-  prefix: /app/plugins/BackgroundRemovalLite
 modules:
   - name: ncnn
     buildsystem: cmake-ninja
@@ -48,6 +44,7 @@ modules:
       - type: git
         url: https://github.com/kaito-tokyo/obs-backgroundremoval-lite.git
         tag: 1.4.3
+        commit: '6628caf9ad6e741fe8dba5e6b0bd7250e79fbcd1'
         x-checker-data:
           type: git
           tag-pattern: ^([\d.]+)$
@@ -55,8 +52,6 @@ modules:
         path: com.obsproject.Studio.Plugin.BackgroundRemovalLite.metainfo.xml
     post-install:
       - install -Dm644 --target-directory=${FLATPAK_DEST}/share/metainfo ${FLATPAK_BUILDER_BUILDDIR}/${FLATPAK_ID}.metainfo.xml
-      - appstream-compose --basename=${FLATPAK_ID} --prefix=${FLATPAK_DEST} --origin=flatpak
-        ${FLATPAK_ID}
 cleanup:
   - /include
   - /lib/cmake
