--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
@@ -25,6 +25,7 @@ modules:
     buildsystem: cmake-ninja
     builddir: true
     config-opts:
+      - -DCMAKE_INSTALL_PREFIX=${FLATPAK_DEST}
       - -DCMAKE_BUILD_TYPE=Release
       - -DFMT_TEST=OFF
       - -DFMT_DOC=OFF
@@ -37,6 +38,7 @@ modules:
     buildsystem: cmake-ninja
     builddir: true
     config-opts:
+      - -DCMAKE_INSTALL_PREFIX=${FLATPAK_DEST}
       - -DCMAKE_BUILD_TYPE=Release
       - -DENABLE_FRONTEND_API=ON
       - -DENABLE_QT=ON
