--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
@@ -40,6 +40,7 @@ modules:
     builddir: true
     config-opts:
       - -DCMAKE_INSTALL_PREFIX=${FLATPAK_DEST}
+      - -DCMAKE_PREFIX_PATH=/app
       - -DCMAKE_BUILD_TYPE=Release
       - -DENABLE_FRONTEND_API=ON
       - -DENABLE_QT=ON
