--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
@@ -5,6 +5,16 @@ runtime-version: stable
 sdk: org.kde.Sdk//6.8
 build-extension: true
 modules:
+  - name: git-lfs
+    buildsystem: simple
+    build-commands:
+      - ./install.sh
+    sources:
+      - type: git
+        url: https://github.com/git-lfs/git-lfs.git
+        tag: 'v3.7.0'
+        commit: '92dddf560e62ef7dd25877d87ce072f7595aa52d'
+
   - name: ncnn
     buildsystem: cmake-ninja
     builddir: true
