--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
@@ -6,21 +6,17 @@ sdk: org.kde.Sdk//6.8
 build-extension: true
 modules:
   - name: ncnn
-    buildsystem: cmake-ninja
-    builddir: true
-    config-opts:
-      - -DCMAKE_BUILD_TYPE=Release
-      - -DNCNN_VULKAN=OFF
-      - -DNCNN_SYSTEM_GLSLANG=OFF
-      - -DNCNN_BUILD_TOOLS=OFF
-      - -DNCNN_BUILD_EXAMPLES=OFF
-      - -DNCNN_BUILD_BENCHMARK=OFF
-      - -DNCNN_SHARED_LIB=ON
-    sources:
-      - type: git
-        url: https://github.com/Tencent/ncnn.git
-        tag: '20250916'
-        commit: 'c4193aadbbb56582aa87b1850dd3d98fb8fd936d'
+    buildsystem: simple
+    build-commands:
+      - git lfs pull
+      - cmake -S . -B build -G Ninja \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_INSTALL_PREFIX=/app \
+          -DNCNN_SHARED_LIB=ON \
+          -DNCNN_BUILD_TESTS=OFF \
+          -DNCNN_BUILD_EXAMPLES=OFF
+      - cmake --build build
+      - DESTDIR=${FLATPAK_DEST} cmake --install build
   - name: fmt
     buildsystem: cmake-ninja
     builddir: true
