--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
@@ -8,11 +8,12 @@ modules:
   - name: ncnn
     buildsystem: simple
     build-commands:
-      - cmake -S . -B build -G Ninja \
-          -DCMAKE_BUILD_TYPE=Release \
-          -DCMAKE_INSTALL_PREFIX=/app \
-          -DNCNN_SHARED_LIB=ON \
-          -DNCNN_BUILD_TESTS=OFF \
+      - |
+        cmake -S . -B build -G Ninja
+          -DCMAKE_BUILD_TYPE=Release
+          -DCMAKE_INSTALL_PREFIX=/app
+          -DNCNN_SHARED_LIB=ON
+          -DNCNN_BUILD_TESTS=OFF
           -DNCNN_BUILD_EXAMPLES=OFF
       - cmake --build build
       - DESTDIR=${FLATPAK_DEST} cmake --install build
@@ -22,13 +23,13 @@ modules:
         tag: '20250916'
         commit: 'c4193aadbbb56582aa87b1850dd3d98fb8fd936d'
   - name: fmt
-
     buildsystem: simple
     build-commands:
-      - cmake -S . -B build -G Ninja \
-          -DCMAKE_BUILD_TYPE=Release \
-          -DCMAKE_INSTALL_PREFIX=/app \
-          -DFMT_TEST=OFF \
+      - |
+        cmake -S . -B build -G Ninja
+          -DCMAKE_BUILD_TYPE=Release
+          -DCMAKE_INSTALL_PREFIX=/app
+          -DFMT_TEST=OFF
           -DFMT_DOC=OFF
       - cmake --build build
       - DESTDIR=${FLATPAK_DEST} cmake --install build
