--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.BackgroundRemovalLite.yaml
@@ -8,13 +8,7 @@ modules:
   - name: ncnn
     buildsystem: simple
     build-commands:
-      - |
-        cmake -S . -B build -G Ninja
-          -DCMAKE_BUILD_TYPE=Release
-          -DCMAKE_INSTALL_PREFIX=/app
-          -DNCNN_SHARED_LIB=ON
-          -DNCNN_BUILD_TESTS=OFF
-          -DNCNN_BUILD_EXAMPLES=OFF
+      - cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/app -DNCNN_SHARED_LIB=ON -DNCNN_BUILD_TESTS=OFF -DNCNN_BUILD_EXAMPLES=OFF
       - cmake --build build
       - DESTDIR=${FLATPAK_DEST} cmake --install build
     sources:
@@ -26,11 +20,7 @@ modules:
     buildsystem: simple
     build-commands:
       - |
-        cmake -S . -B build -G Ninja
-          -DCMAKE_BUILD_TYPE=Release
-          -DCMAKE_INSTALL_PREFIX=/app
-          -DFMT_TEST=OFF
-          -DFMT_DOC=OFF
+        cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/app -DFMT_TEST=OFF -DFMT_DOC=OFF
       - cmake --build build
       - DESTDIR=${FLATPAK_DEST} cmake --install build
     sources:
