Add initial SelfieSegmenter unit test and update CMake
Introduced a new test file for SelfieSegmenter and updated the test CMakeLists to build and link the new test with required dependencies. Also removed an unused include from SelfieSegmenter.hpp and updated copyright in Stub_test.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,7 @@
 include(GoogleTest)
-add_executable(Stub_test Stub_test.cpp)
-target_link_libraries(Stub_test PRIVATE GTest::gtest_main)
-gtest_discover_tests(Stub_test DISCOVERY_MODE PRE_TEST)
+
+add_executable(SelfieSegmenter_test SelfieSegmenter/SelfieSegmenter_test.cpp)
+target_include_directories(SelfieSegmenter_test PRIVATE ${Stb_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/src)
+target_link_libraries(SelfieSegmenter_test PRIVATE GTest::gtest_main ncnn)
+gtest_discover_tests(SelfieSegmenter_test DISCOVERY_MODE PRE_TEST)
+
