--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,16 @@
 include(GoogleTest)
 
-add_executable(SelfieSegmenter_test SelfieSegmenter/SelfieSegmenter_test.cpp)
-target_include_directories(SelfieSegmenter_test PRIVATE ${Stb_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/src)
+add_executable(SelfieSegmenter_test
+	SelfieSegmenter/SelfieSegmenter_test.cpp
+)
+target_include_directories(SelfieSegmenter_test PRIVATE
+	${CMAKE_SOURCE_DIR}/src
+	${CMAKE_CURRENT_SOURCE_DIR}/SelfieSegmenter
+)
+target_compile_definitions(SelfieSegmenter_test PRIVATE
+	DATA_DIR=\"${CMAKE_SOURCE_DIR}/data\"
+	TESTS_DIR=\"${CMAKE_SOURCE_DIR}/tests\"
+)
 target_link_libraries(SelfieSegmenter_test PRIVATE GTest::gtest_main ncnn)
 gtest_discover_tests(SelfieSegmenter_test DISCOVERY_MODE PRE_TEST)
 
