--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,3 +15,8 @@ target_compile_definitions(
 )
 target_link_libraries(SelfieSegmenter_test PRIVATE GTest::gtest_main ncnn)
 gtest_discover_tests(SelfieSegmenter_test DISCOVERY_MODE PRE_TEST)
+
+add_executable(UpdateChecker_test UpdateChecker/UpdateChecker_test.cpp)
+target_include_directories(UpdateChecker_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
+target_link_libraries(UpdateChecker_test PRIVATE GTest::gtest_main CURL::libcurl)
+gtest_discover_tests(UpdateChecker_test DISCOVERY_MODE PRE_TEST)
