Add AVX2-enabled vcpkg triplets and update CI configs
Introduced new vcpkg triplets for x64-linux, x64-windows, and x64-osx with AVX2 support, and updated CI workflows and CMake presets to use these triplets. This enables AVX2 optimizations in builds for improved performance.

--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -423,7 +423,7 @@ jobs:
             -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json"
 
       - name: "Install dependencies from vcpkg"
-        run: "$VCPKG_ROOT/vcpkg install --triplet x64-linux"
+        run: "$VCPKG_ROOT/vcpkg install --triplet x64-linux-obs"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
@@ -519,7 +519,7 @@ jobs:
 
       - name: "Install dependencies from vcpkg"
         shell: bash
-        run: "$VCPKG_ROOT/vcpkg install --triplet x64-windows-static-md"
+        run: "$VCPKG_ROOT/vcpkg install --triplet x64-windows-static-md-obs"
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
