Add AVX2-enabled vcpkg triplets and update CI configs (#135)
* Add AVX2-enabled vcpkg triplets and update CI configs

Introduced new vcpkg triplets for x64-linux, x64-windows, and x64-osx with AVX2 support, and updated CI workflows and CMake presets to use these triplets. This enables AVX2 optimizations in builds for improved performance.

* Update my-testing.yaml

--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -100,7 +100,7 @@ jobs:
             -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: "Install dependencies from vcpkg"
-        run: "$VCPKG_ROOT/vcpkg install --triplet x64-windows-static-md"
+        run: "$VCPKG_ROOT/vcpkg install --triplet x64-windows-static-md-obs"
 
       - name: "Configure"
         run: "cmake --preset windows-testing-ci-x64"
@@ -161,7 +161,7 @@ jobs:
             -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: "Install dependencies from vcpkg"
-        run: "$VCPKG_ROOT/vcpkg install --triplet x64-linux"
+        run: "$VCPKG_ROOT/vcpkg install --triplet x64-linux-obs"
 
       - name: "Configure"
         run: "cmake --preset ubuntu-testing-ci-x86_64"
