--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
@@ -22,7 +22,7 @@ modules:
         url: https://github.com/Tencent/ncnn.git
         tag: '20250916'
         commit: 'c4193aadbbb56582aa87b1850dd3d98fb8fd936d'
-  - name: backgroundremoval-lite
+  - name: live-backgroundremoval-lite
     buildsystem: cmake-ninja
     builddir: true
     config-opts:
@@ -38,7 +38,7 @@ modules:
           type: git
           tag-pattern: ^([\d.]+)$
       - type: file
-        path: com.obsproject.Studio.Plugin.BackgroundRemovalLite.metainfo.xml
+        path: com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.metainfo.xml
     post-install:
       - install -Dm644 --target-directory=${FLATPAK_DEST}/share/metainfo ${FLATPAK_BUILDER_BUILDDIR}/${FLATPAK_ID}.metainfo.xml
 cleanup:
