--- a/.github/workflows/my-astro.yml
+++ b/.github/workflows/my-astro.yml
@@ -1,6 +1,9 @@
 name: Deploy Astro site to Pages
 
 on:
+  pull_request:
+    branches:
+      - "main"
   push:
     branches:
       - "main"
@@ -72,6 +75,7 @@ jobs:
       url: "${{ steps.deployment.outputs.page_url }}"
     needs: "build"
     runs-on: "ubuntu-24.04"
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
     name: "Deploy"
     steps:
       - name: "Deploy to GitHub Pages"
