Add runtime deps to makedepends in PKGBUILDs
Included 'obs-studio', 'curl', 'fmt', and 'ncnn' in makedepends for both live-backgroundremoval-lite and live-backgroundremoval-lite-git PKGBUILDs to ensure all build requirements are explicitly listed.

--- a/unsupported/arch/live-backgroundremoval-lite-git/PKGBUILD
+++ b/unsupported/arch/live-backgroundremoval-lite-git/PKGBUILD
@@ -8,7 +8,7 @@ arch=('x86_64')
 url="https://github.com/kaito-tokyo/${_pkgname}"
 license=('GPL-3.0-or-later')
 depends=('obs-studio' 'curl' 'fmt' 'ncnn')
-makedepends=('git' 'cmake' 'ninja')
+makedepends=('git' 'cmake' 'ninja' 'obs-studio' 'curl' 'fmt' 'ncnn')
 provides=("${_pkgname}" "${_pkgname}-debug")
 conflicts=("${_pkgname}" "${_pkgname}-debug")
 source=("${_pkgname}::git+https://github.com/kaito-tokyo/${_pkgname}.git")
