--- a/unsupported/arch/live-backgroundremoval-lite/PKGBUILD
+++ b/unsupported/arch/live-backgroundremoval-lite/PKGBUILD
@@ -7,7 +7,7 @@ arch=('x86_64')
 url="https://github.com/kaito-tokyo/${pkgname}"
 license=('GPL-3.0-or-later')
 depends=('obs-studio' 'curl' 'fmt' 'ncnn')
-makedepends=('git' 'cmake' 'ninja')
+makedepends=('git' 'cmake' 'ninja' 'obs-studio' 'curl' 'fmt' 'ncnn')
 conflicts=("${pkgname}-git" "${pkgname}-git-debug")
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/kaito-tokyo/$pkgname/archive/refs/tags/$pkgver.tar.gz")
 sha256sums=('64dceffdbb7bf42538589a4c272cc6ca5ede2cb9de02ca53bfe467467ab5bcae')
