--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
@@ -29,6 +29,7 @@ modules:
       - -DCMAKE_BUILD_TYPE=Release
       - -DENABLE_FRONTEND_API=ON
       - -DENABLE_QT=ON
+      - -DUSE_PKGCONFIG=ON
     sources:
       - type: git
         url: https://github.com/kaito-tokyo/live-backgroundremoval-lite.git
