--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
@@ -33,8 +33,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/kaito-tokyo/live-backgroundremoval-lite.git
-        tag: 1.8.2
-        commit: 'cf90e1c9ba6fc0b7e031b6ffec63a797373ae100'
+        branch: fix-arch-build
         x-checker-data:
           type: git
           tag-pattern: ^([\d.]+)$
