--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
@@ -22,6 +22,10 @@ modules:
         url: https://github.com/Tencent/ncnn.git
         tag: '20250916'
         commit: 'c4193aadbbb56582aa87b1850dd3d98fb8fd936d'
+  - name: simple
+    buildsystem: simple
+    build-commands:
+      - find /usr
   - name: live-backgroundremoval-lite
     buildsystem: cmake-ninja
     builddir: true
