--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
@@ -31,6 +31,7 @@ modules:
     builddir: true
     config-opts:
       - -DCMAKE_BUILD_TYPE=Release
+      - -DCMAKE_PREFIX_PATH=/app/plugins/LiveBackgroundRemovalLite
       - -DENABLE_FRONTEND_API=ON
       - -DENABLE_QT=ON
       - -DUSE_PKGCONFIG=ON
