--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.yaml
@@ -32,6 +32,7 @@ modules:
     config-opts:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCMAKE_PREFIX_PATH=/app/plugins/LiveBackgroundRemovalLite
+      - -DCMAKE_INSTALL_INCLUDEDIR=include
       - -DENABLE_FRONTEND_API=ON
       - -DENABLE_QT=ON
       - -DUSE_PKGCONFIG=ON
