--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ if(USE_PKGCONFIG)
       INTERFACE_LINK_LIBRARIES "${PC_NCNN_LIBRARIES}"
       INTERFACE_COMPILE_DEFINITIONS "${PC_NCNN_CFLAGS_OTHER}"
   )
+  message(FATAL_ERROR "NCNN include dirs: ${PC_NCNN_INCLUDE_DIRS}")
 else()
   find_package(Backward CONFIG)
   find_package(CURL CONFIG REQUIRED)
