--- a/.github/workflows/my-unsupported-build.yaml
+++ b/.github/workflows/my-unsupported-build.yaml
@@ -37,6 +37,12 @@ jobs:
       - name: "Checkout project repository"
         uses: "actions/checkout@v5"
 
+      - name: "Add user"
+        run: |
+          useradd -m builder
+          echo 'builder ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/builder
+          chown -R builder:builder "${{ github.workspace }}"
+
       - name: "Build"
         working-directory: "unsupported/arch/live-backgroundremoval-lite"
-        run: "makepkg -i"
+        run: "sudo -u builder makepkg -s --noconfirm"
