--- a/.github/workflows/my-unsupported-build.yaml
+++ b/.github/workflows/my-unsupported-build.yaml
@@ -41,7 +41,7 @@ jobs:
         run: |
           useradd -m builder
           echo 'builder ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/builder
-          chown -R builder:builder "${{ github.workspace }}"
+          chown -R builder:builder .
 
       - name: "Build"
         working-directory: "unsupported/arch/live-backgroundremoval-lite"
