--- a/.github/workflows/my-unsupported-build.yaml
+++ b/.github/workflows/my-unsupported-build.yaml
@@ -37,12 +37,12 @@ jobs:
       - name: "Checkout project repository"
         uses: "actions/checkout@v5"
 
-      - name: "Setup buildeer"
+      - name: "Setup builder"
         run: |
           useradd -m builder
           echo 'builder ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/builder
           chown -R builder:builder .
-          pacman -Sy --noconform
+          pacman -Sy --noconfirm
 
       - name: "Build"
         working-directory: "unsupported/arch/live-backgroundremoval-lite"
