--- a/.github/workflows/my-unsupported-build.yaml
+++ b/.github/workflows/my-unsupported-build.yaml
@@ -47,3 +47,26 @@ jobs:
       - name: "Build"
         working-directory: "unsupported/arch/live-backgroundremoval-lite"
         run: "sudo -u builder makepkg -s --noconfirm"
+
+  BuildOnArchGit:
+    runs-on: "ubuntu-24.04"
+
+    timeout-minutes: 30
+
+    container:
+      image: "archlinux:base-devel"
+
+    steps:
+      - name: "Checkout project repository"
+        uses: "actions/checkout@v5"
+
+      - name: "Setup builder"
+        run: |
+          useradd -m builder
+          echo 'builder ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/builder
+          chown -R builder:builder .
+          pacman -Sy --noconfirm
+
+      - name: "Build"
+        working-directory: "unsupported/arch/live-backgroundremoval-lite-git"
+        run: "sudo -u builder makepkg -s --noconfirm"
