Add opencv as dependency for background removal
Added 'opencv' to the depends array in both PKGBUILD files for live-backgroundremoval-lite and live-backgroundremoval-lite-git to ensure required libraries are available for proper functionality.

--- a/unsupported/arch/live-backgroundremoval-lite/PKGBUILD
+++ b/unsupported/arch/live-backgroundremoval-lite/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc='Live Background Removal Lite for OBS Studio'
 arch=('x86_64')
 url="https://github.com/kaito-tokyo/${pkgname}"
 license=('GPL-3.0-or-later')
-depends=('obs-studio' 'curl' 'fmt' 'ncnn')
+depends=('obs-studio' 'curl' 'fmt' 'ncnn' 'opencv')
 makedepends=('git' 'cmake' 'ninja')
 conflicts=("${pkgname}-git" "${pkgname}-git-debug")
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/kaito-tokyo/$pkgname/archive/refs/tags/$pkgver.tar.gz")
