Update OpenCV build options in Flatpak manifest
Simplified and adjusted CMake build options for OpenCV in the LiveBackgroundRemovalLite plugin manifest. Switched from disabling image libraries to enabling JPEG and PNG, disabled TIFF, and removed several redundant or unnecessary flags. This should streamline the build and reduce dependencies.

--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
@@ -18,42 +18,29 @@
         "-D CMAKE_BUILD_TYPE=Release",
         "-D BUILD_SHARED_LIBS=ON",
         "-D OPENCV_GENERATE_PKGCONFIG=ON",
+        "-D BUILD_LIST=core,imgproc,imgcodecs",
         "-D BUILD_TESTS=OFF",
         "-D BUILD_PERF_TESTS=OFF",
         "-D BUILD_EXAMPLES=OFF",
         "-D BUILD_DOCS=OFF",
         "-D BUILD_opencv_apps=OFF",
-        "-D BUILD_opencv_java=OFF",
-        "-D BUILD_WITH_DEBUG_INFO=ON",
-        "-D BUILD_ZLIB=OFF",
-        "-D BUILD_PNG=OFF",
-        "-D BUILD_JPEG=OFF",
-        "-D BUILD_TIFF=OFF",
-        "-D BUILD_WEBP=OFF",
-        "-D BUILD_OPENEXR=OFF",
-        "-D BUILD_OPENJPEG=OFF",
-        "-D BUILD_TBB=OFF",
-        "-D BUILD_PROTOBUF=OFF",
-        "-D WITH_FFMPEG=OFF",
-        "-D WITH_GSTREAMER=OFF",
-        "-D WITH_IPP=OFF",
-        "-D WITH_GTK=OFF",
-        "-D WITH_QT=OFF",
-        "-D WITH_CUDA=OFF",
-        "-D WITH_EIGEN=OFF",
-        "-D WITH_OPENCL=OFF",
-        "-D WITH_OPENGL=OFF",
-        "-D WITH_VTK=OFF",
         "-D WITH_JPEG=ON",
         "-D WITH_PNG=ON",
-        "-D WITH_TIFF=ON",
+        "-D WITH_TIFF=OFF",
         "-D WITH_WEBP=OFF",
         "-D WITH_OPENJPEG=OFF",
         "-D WITH_OPENEXR=OFF",
-        "-D WITH_JASPER=OFF",
-        "-D WITH_AVIF=OFF",
-        "-D WITH_GDAL=OFF",
-        "-D WITH_GDCM=OFF"
+        "-D WITH_FFMPEG=OFF",
+        "-D WITH_GSTREAMER=OFF",
+        "-D WITH_IPP=OFF",
+        "-D WITH_LAPACK=OFF",
+        "-D WITH_PROTOBUF=OFF",
+        "-D WITH_QUIRC=OFF",
+        "-D WITH_GTK=OFF",
+        "-D WITH_QT=OFF",
+        "-D WITH_OPENGL=OFF",
+        "-D WITH_CUDA=OFF",
+        "-D WITH_EIGEN=OFF"
       ],
       "sources": [
         {
