--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
@@ -26,7 +26,8 @@
         "-D BUILD_opencv_apps=OFF",
         "-D WITH_JPEG=ON",
         "-D WITH_PNG=ON",
-        "-D WITH_TIFF=OFF",
+        "-D WITH_TIFF=ON",
+        "-D WITH_JASPER=OFF",
         "-D WITH_WEBP=OFF",
         "-D WITH_OPENJPEG=OFF",
         "-D WITH_OPENEXR=OFF",
