--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ if(USE_PKGCONFIG)
     CURL::libcurl
     PROPERTIES
       INTERFACE_INCLUDE_DIRECTORIES "${PC_CURL_INCLUDE_DIRS}"
+      INTERFACE_LINK_DIRECTORIES "${PC_CURL_LIBRARY_DIRS}"
       INTERFACE_LINK_LIBRARIES "${PC_CURL_LIBRARIES}"
       INTERFACE_COMPILE_DEFINITIONS "${PC_CURL_CFLAGS_OTHER}"
   )
@@ -58,6 +59,7 @@ if(USE_PKGCONFIG)
     fmt::fmt
     PROPERTIES
       INTERFACE_INCLUDE_DIRECTORIES "${PC_FMT_INCLUDE_DIRS}"
+      INTERFACE_LINK_DIRECTORIES "${PC_FMT_LIBRARY_DIRS}"
       INTERFACE_LINK_LIBRARIES "${PC_FMT_LIBRARIES}"
       INTERFACE_COMPILE_DEFINITIONS "${PC_FMT_CFLAGS_OTHER}"
   )
@@ -68,6 +70,7 @@ if(USE_PKGCONFIG)
     ncnn
     PROPERTIES
       INTERFACE_INCLUDE_DIRECTORIES "${PC_NCNN_INCLUDE_DIRS}"
+      INTERFACE_LINK_DIRECTORIES "${PC_NCNN_LIBRARY_DIRS}"
       INTERFACE_LINK_LIBRARIES "${PC_NCNN_LIBRARIES}"
       INTERFACE_COMPILE_DEFINITIONS "${PC_NCNN_CFLAGS_OTHER}"
   )
@@ -78,6 +81,7 @@ if(USE_PKGCONFIG)
     opencv_all
     PROPERTIES
       INTERFACE_INCLUDE_DIRECTORIES "${PC_OPENCV_INCLUDE_DIRS}"
+      INTERFACE_LINK_DIRECTORIES "${PC_OPENCV_LIBRARY_DIRS}"
       INTERFACE_LINK_LIBRARIES "${PC_OPENCV_LIBRARIES}"
       INTERFACE_COMPILE_DEFINITIONS "${PC_OPENCV_CFLAGS_OTHER}"
   )
