--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
@@ -152,8 +152,7 @@
         {
           "type": "git",
           "url": "https://github.com/kaito-tokyo/live-backgroundremoval-lite.git",
-          "tag": "1.8.6",
-          "commit": "0929e9c47c62a9184b69162adcd53d9b60a9dcf1",
+          "branch": "fix-flatpak",
           "x-checker-data": {
             "type": "git",
             "tag-pattern": "^([\\d.]+)$"
