--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,23 +76,39 @@ if(USE_PKGCONFIG)
   )
 
   pkg_check_modules(PC_OPENCV REQUIRED opencv4)
-  add_library(opencv_all INTERFACE IMPORTED GLOBAL)
+  add_library(opencv_core INTERFACE IMPORTED GLOBAL)
   set_target_properties(
     opencv_all
     PROPERTIES
       INTERFACE_INCLUDE_DIRECTORIES "${PC_OPENCV_INCLUDE_DIRS}"
       INTERFACE_LINK_DIRECTORIES "${PC_OPENCV_LIBRARY_DIRS}"
-      INTERFACE_LINK_LIBRARIES "${PC_OPENCV_LIBRARIES}"
+      INTERFACE_LINK_LIBRARIES "opencv_core"
       INTERFACE_COMPILE_DEFINITIONS "${PC_OPENCV_CFLAGS_OTHER}"
   )
-  set(OPENCV_LIBS opencv_all)
+  add_library(opencv_imgproc INTERFACE IMPORTED GLOBAL)
+  set_target_properties(
+    opencv_imgproc
+    PROPERTIES
+      INTERFACE_INCLUDE_DIRECTORIES "${PC_OPENCV_INCLUDE_DIRS}"
+      INTERFACE_LINK_DIRECTORIES "${PC_OPENCV_LIBRARY_DIRS}"
+      INTERFACE_LINK_LIBRARIES "opencv_imgproc"
+      INTERFACE_COMPILE_DEFINITIONS "${PC_OPENCV_CFLAGS_OTHER}"
+  )
+  add_library(opencv_imgcodecs INTERFACE IMPORTED GLOBAL)
+  set_target_properties(
+    opencv_imgcodecs
+    PROPERTIES
+      INTERFACE_INCLUDE_DIRECTORIES "${PC_OPENCV_INCLUDE_DIRS}"
+      INTERFACE_LINK_DIRECTORIES "${PC_OPENCV_LIBRARY_DIRS}"
+      INTERFACE_LINK_LIBRARIES "opencv_imgcodecs"
+      INTERFACE_COMPILE_DEFINITIONS "${PC_OPENCV_CFLAGS_OTHER}"
+  )
 else()
   find_package(Backward CONFIG)
   find_package(CURL CONFIG REQUIRED)
   find_package(fmt CONFIG REQUIRED)
   find_package(ncnn CONFIG REQUIRED)
   find_package(OpenCV CONFIG REQUIRED)
-  set(OPENCV_LIBS opencv_core opencv_imgproc opencv_imgcodecs)
 endif()
 
 target_compile_definitions(
@@ -112,7 +128,7 @@ target_sources(
 )
 target_link_libraries(
   ${CMAKE_PROJECT_NAME}
-  PUBLIC OBS::libobs CURL::libcurl fmt::fmt ncnn ${OPENCV_LIBS}
+  PUBLIC OBS::libobs CURL::libcurl fmt::fmt ncnn opencv_core opencv_imgproc opencv_imgcodecs
 )
 if(Backward_FOUND)
   target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Backward::Backward)
@@ -128,7 +144,6 @@ if(BUILD_TESTING)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}/share/stb")
 
   find_package(GTest CONFIG REQUIRED)
-  find_package(Stb MODULE REQUIRED)
 
   add_subdirectory(tests)
 endif()
