--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ target_compile_definitions(
   SelfieSegmenter_test
   PRIVATE DATA_DIR=\"${CMAKE_SOURCE_DIR}/data\" TESTS_DIR=\"${CMAKE_SOURCE_DIR}/tests\" NOMINMAX
 )
-target_link_libraries(SelfieSegmenter_test PRIVATE GTest::gtest_main ncnn)
+target_link_libraries(SelfieSegmenter_test PRIVATE GTest::gtest_main ncnn opencv_core opencv_imgproc opencv_imgcodecs)
 gtest_discover_tests(SelfieSegmenter_test DISCOVERY_MODE PRE_TEST)
 
 add_executable(UpdateChecker_test UpdateChecker/UpdateChecker_test.cpp)
